--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "dotenv": "6.2.0",
     "express": "4.16.4",
-    "pg": "7.8.0"
+    "pg": "7.8.0",
+    "save": "^2.3.3",
+    "validator": "^10.11.0",
+    "xss": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "5.14.1",
