--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "dependencies": {
     "dotenv": "6.2.0",
     "express": "4.16.4",
+    "node": "^11.11.0",
     "pg": "7.8.0",
     "save": "^2.3.3",
     "validator": "^10.11.0",
     "xss": "^1.0.3"
   },
   "devDependencies": {
-    "eslint": "5.14.1",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-plugin-import": "2.16.0",
-    "nodemon": "1.18.10"
+    "nodemon": "^1.18.10"
   }
 }
